--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uno-it",
-  "version": "0.0.0",
-  "description": "Sum a collection of units into one single unit",
+  "version": "1.0.0",
+  "description": "Sum a string of multiple units into one single unit",
   "license": "MIT",
   "repository": "brh55/uno-it",
   "author": {
@@ -19,7 +19,12 @@
     "index.js"
   ],
   "keywords": [
-    ""
+    "unit conversion",
+    "sum conversion",
+    "measurements",
+    "imperial",
+    "standard",
+    "metrics"
   ],
   "dependencies": {
     "convert-units": "^1.3.1",
